@@ -121,7 +121,7 @@
       </listitem>
       <listitem>
 	<para>
-	  Norwegian bokm&aaring;l 
+	  Norwegian 
 	</para>
       </listitem>
       <listitem>
