@@ -1,3 +1,11 @@
+2003-09-01 John Fleck <jfleck@inkstain.net>
+
+	* ri18n.xml
+	* rnstandards.xml
+	make language in freedesktop discussion more cautious per
+	jrb's suggest
+	minor fix in translation list
+
 2003-09-01  Danilo Šegan  <dsegan@gmx.net>
 
 	* rni18n.xml: Added Norwegian to the list, and corrected the sort
